--- a/src/components/layout/navigation/MainNavigation.css
+++ b/src/components/layout/navigation/MainNavigation.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  position: absolute;
   top: 0px;
   left: 0;
   z-index: 99;
